--- a/src/styles/SearchBar.module.css
+++ b/src/styles/SearchBar.module.css
@@ -1,3 +1,12 @@
+.SearchBar {
+  width: 100%;
+  max-width: 300px;
+  min-width: 140px;
+  flex-shrink: 1;
+  margin-left: 0;
+  position: relative;
+}
+
 .SearchBar input {
   padding: 0.5rem 1rem 0.5rem 2.5rem;
   border: 1px solid white;
@@ -10,4 +19,10 @@
   font-size: 1.5rem;
   padding: 0.5rem;
   color: #242a3d;
+}
+
+@media (max-width: 335px) {
+  .SearchBar {
+    max-width: 120px;
+  }
 }
